# Amharic-bible

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  REUSE.toml  io.github.wesenseged.AmharicBible.json  org.wesen.bible.json  org.wesen.bible.metainfo.xml
data/: io.github.wesenseged.Amharic-bible.desktop  io.github.wesenseged.Amharic-bible.metainfo.xml  io.github.wesenseged.AmharicBible.desktop  io.github.wesenseged.AmharicBible.metainfo.xml
src/: CMakeLists.txt  main.cpp
src/data/: 1chronicles.json  1corinthians.json  1john.json  1kings.json  1peter.json  1samuel.json  1thessalonians.json  1timothy.json  2chronicles.json  2corinthians.json  2john.json  2kings.json  2peter.json  2samuel.json  2thessalonians.json  2timothy.json  3john.json  acts.json  amos.json  books.json  colossians.json  daniel.json  deuteronomy.json  ecclesiastes.json  ephesians.json  esther.json  exodus.json  ezekiel.json  ezra.json  galatians.json  genesis.json  habakkuk.json  haggai.json  hebrews.json  hoshea.json  isaiah.json  james.json  jeremiah.json  job.json  joel.json  (+27 more)
src/qml/: Main.qml
src/qml/components/: Testimonial.qml
src/qml/header/: DefaultHeader.qml
src/qml/pages/: AboutPage.qml  BookPage.qml  WelcomePage.qml
